# chatbot

./: Dockerfile  Makefile  README.md  agent_dashboard.html  alembic.ini  chatbot.db  demo.html  docker-compose.yml  not  notes  pyproject.toml
alembic/: env.py
alembic/versions/: 20260305_agent_handoff.py
backend/: __init__.py  config.py  logging_config.py  main.py  schemas.py  seed.py
backend/api/: admin_routes.py  agent_routes.py  auth_routes.py  chat_routes.py  widget_routes.py
backend/auth/: api_keys.py  dependencies.py  jwt.py  passwords.py
backend/chat/: __init__.py  engine.py  prompts.py  tools.py
backend/db/: models.py  session.py
backend/middleware/: error_handlers.py  logging_middleware.py  rate_limiter.py  request_id.py
backend/services/: agent_service.py  conversation_service.py  faq_service.py  order_service.py  product_service.py
chatbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_auth.py  test_chat.py  test_schemas.py
widget/: package-lock.json  package.json  vite.config.js
widget/src/: api.js  auth.js  chatbot.js  styles.js
